--- a/public/example.html
+++ b/public/example.html
@@ -1,13 +1,13 @@
 <html>
 <head>
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-  </head>
+</head>
   <body>
     <h1>Example iframe</h1>
     <button class="btn btn-primary" id="openBtn">Buy</button>
     <div id="paymentModal" class"modal hide fade" role="dialog">
       <div class="modal-body">
-        <iframe src="" style="zoon:0.6" width="99.6%" height="550" frameborder="0"></iframe>
+        <iframe src="" style="zoom:0.6" width="99.6%" height="550" frameborder="0"></iframe>
         </div> <!-- end of modal-body div> -->
         </div><!-- end of paymentModal div> -->
         
@@ -17,7 +17,7 @@
         <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
         
         <script type="text/javascript">
-        var frameSrc= "/buy/akkdio";
+        var frameSrc= "/iframe//buy/akkdio";
         $("#openBtn").click(function(){
           $("#paymentModal").on("show", function(){
             $('iframe').attr('src', frameSrc);
