testing the iframe source

--- a/public/example.html
+++ b/public/example.html
@@ -17,7 +17,7 @@
         <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
         
         <script type="text/javascript">
-        var frameSrc= "/buy/akkdio";
+        var frameSrc= "/iframe/buy/akkdio";
         $("#openBtn").click(function(){
           $("#paymentModal").on("show", function(){
             $('iframe').attr('src', frameSrc);
